[tool.poetry]
name = "callhome"
version = "0.2.1"
description = "Report systems hostname/ip address to a redis db"
authors = ["Aksel Sjögren <asjogren@itrsgroup.com>"]
license = "MIT"

[tool.poetry.scripts]
"callhome-agent" = "callhome.main:cli_agent"
"callhome-client" = "callhome.main:cli_client"

[tool.poetry.dependencies]
python = "^3.6.8"
redis = ">=2.10,<4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
